[package]
name = "hft-engine"
version = "0.1.0"
edition = "2021"
description = "單 writer 事件循環：Scheduler/Joiner/BarBuilder/Router"

[dependencies]
hft-core = { package = "hft-core", path = "../core" }
snapshot = { package = "hft-snapshot", path = "../snapshot" }
oms-core = { package = "hft-oms-core", path = "../oms-core" }
portfolio-core = { package = "hft-portfolio-core", path = "../portfolio-core" }
crossbeam = { workspace = true }
crossbeam-utils = { version = "0.8", default-features = false }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros"] }
futures = { workspace = true }
rust_decimal = { version = "1.33", features = ["serde"] }
ports = { package = "hft-ports", path = "../ports" }
instrument = { package = "hft-instrument", path = "../instrument" }
chrono = { version = "0.4", features = ["serde"] }
infra-metrics = { package = "hft-infra-metrics", path = "../infra/metrics" }

[features]
default = []
# 僅在基準測試或實驗時啟用 lockfree_queue 模組導出
bench-lockfree = []

[dev-dependencies]
hft-data-adapter-bitget = { path = "../data/adapters/adapter-bitget" }
strategy-trend = { package = "hft-strategy-trend", path = "../../strategies/trend" }
strategy-arbitrage = { package = "hft-strategy-arbitrage", path = "../../strategies/arbitrage" }
async-stream = "0.3"
num-traits = "0.2"
serde_yaml = "0.9"
async-trait = "0.1"

[lib]
name = "engine"
 
