[package]
name = "hft-recovery"
version = "0.1.0"
edition = "2021"
authors = ["HFT System <dev@hft.com>"]
description = "Startup recovery and reconciliation system for HFT"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "time", "sync", "rt", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
async-trait = "0.1"
futures = { workspace = true }

# Internal dependencies
hft-core = { path = "../core" }
oms-core = { package = "hft-oms-core", path = "../oms-core" }
portfolio-core = { package = "hft-portfolio-core", path = "../portfolio-core" }
ports = { package = "hft-ports", path = "../ports" }

# Optional execution client dependencies
adapter-bitget-execution = { package = "hft-execution-adapter-bitget", path = "../execution/adapters/adapter-bitget", optional = true }
adapter-binance-execution = { package = "hft-execution-adapter-binance", path = "../execution/adapters/adapter-binance", optional = true }

[features]
default = []
bitget = ["adapter-bitget-execution"]
binance = ["adapter-binance-execution"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"