[package]
name = "hft-risk"
version = "0.1.0"
edition = "2021"
description = "事前風控：額度/速率/冷卻/時間窗/陳舊度/滑點"

[dependencies]
serde = { workspace = true }
hft-core = { package = "hft-core", path = "../core" }
ports = { package = "hft-ports", path = "../ports" }
instrument = { package = "hft-instrument", path = "../instrument" }
rust_decimal = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
live = []
paper = []
metrics = []

[lib]
name = "risk"
