[package]
name = "hft-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime"

[dependencies]
# Core dependencies
hft_core = { package = "hft-core", path = "../core" }
ports = { package = "hft-ports", path = "../ports" }
engine = { package = "hft-engine", path = "../engine" }
integration = { package = "hft-integration", path = "../integration" }
risk = { package = "hft-risk", path = "../risk" }
snapshot = { package = "hft-snapshot", path = "../snapshot" }

# Data adapters (optional)
adapter-bitget-data = { package = "hft-data-adapter-bitget", path = "../data/adapters/adapter-bitget", optional = true }
adapter-binance-data = { package = "hft-data-adapter-binance", path = "../data/adapters/adapter-binance", optional = true }
adapter-bybit-data = { package = "hft-data-adapter-bybit", path = "../data/adapters/adapter-bybit", optional = true }
adapter-mock-data = { package = "hft-data-adapter-mock", path = "../data/adapters/adapter-mock", optional = true }

# Execution adapters (optional)
adapter-bitget-execution = { package = "hft-execution-adapter-bitget", path = "../execution/adapters/adapter-bitget", optional = true }
adapter-binance-execution = { package = "hft-execution-adapter-binance", path = "../execution/adapters/adapter-binance", optional = true }
adapter-bybit-execution = { package = "hft-execution-adapter-bybit", path = "../execution/adapters/adapter-bybit", optional = true }

# Strategy libraries (optional)
strategy-trend = { package = "hft-strategy-trend", path = "../../strategies/trend", optional = true }
strategy-arbitrage = { package = "hft-strategy-arbitrage", path = "../../strategies/arbitrage", optional = true }
# Note: strategy-dl is not yet implemented, but we provide the feature flag for forward compatibility

# Infrastructure (optional)
infra-clickhouse = { package = "hft-infra-clickhouse", path = "../infra/clickhouse", optional = true }
infra-redis = { package = "hft-infra-redis", path = "../infra/redis", optional = true }
infra-metrics = { package = "hft-infra-metrics", path = "../infra/metrics", optional = true }

# Serialization and async
serde = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
regex = "1.5"

[features]
default = []

# 完整運行時測試（包含 async 啟停）
full_runtime_test = ["tokio/test-util"]

# Data adapters
adapter-bitget-data = ["dep:adapter-bitget-data"]
adapter-binance-data = ["dep:adapter-binance-data"]
adapter-bybit-data = ["dep:adapter-bybit-data"]
adapter-mock-data = ["dep:adapter-mock-data"]

# Execution adapters
adapter-bitget-execution = ["dep:adapter-bitget-execution"]
adapter-binance-execution = ["dep:adapter-binance-execution"]
adapter-bybit-execution = ["dep:adapter-bybit-execution"]

# Strategies
strategy-trend = ["dep:strategy-trend"]
strategy-arbitrage = ["dep:strategy-arbitrage"]
strategy-dl = [] # Forward compatibility - will be implemented later

# Infrastructure
infra-clickhouse = ["dep:infra-clickhouse"]
infra-redis = ["dep:infra-redis"]
infra-metrics = ["dep:infra-metrics"]

# Convenience features
bitget = ["adapter-bitget-data", "adapter-bitget-execution"]
binance = ["adapter-binance-data", "adapter-binance-execution"]
bybit = ["adapter-bybit-data", "adapter-bybit-execution"]
mock = ["adapter-mock-data"]
all-strategies = ["strategy-trend", "strategy-arbitrage", "strategy-dl"]
full = ["bitget", "binance", "bybit", "all-strategies", "adapter-mock-data"]