[package]
name = "hft-snapshot"
version = "0.1.0"
edition = "2021"
description = "快照容器：ArcSwap / left-right 可互換"

[dependencies]
arc-swap = { workspace = true }
left-right = { workspace = true, optional = true }
serde = { workspace = true }

[features]
default = []
snapshot-left-right = ["dep:left-right"]

[lib]
name = "snapshot"
