[package]
name = "hft-testing"
version = "0.1.0"
edition = "2021"
description = "回放/壓測/基準；錄帶與重放"

[dependencies]
serde = { workspace = true }
hft_core = { package = "hft-core", path = "../core" }
ports = { package = "hft-ports", path = "../ports" }
tracing = { workspace = true }
futures = { workspace = true }

[features]
default = []
replay = []

[lib]
name = "testing"
